--- a/index.html
+++ b/index.html
@@ -30,6 +30,13 @@
         <a href="./graphcolouring.cpp">GRAPH-COLORING</a>
         <br>
         <a href="./mergesort.cpp">mERGESORT</a>
+        <br>
+        <a href="./min-max.cpp">MIN-MAX</a>
+        <br>
+        <a href="./minnoofscalar.cpp">CHAINMULTIPLICATION</a>
+        <br>
+        <a href="./floyadversal.cpp">FLOYADVERSAL</a>
     </div>
+    
 </body>
 </html>
