--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@
         <a href="./minnoofscalar.cpp">CHAINMULTIPLICATION</a>
         <br>
         <a href="./floyadversal.cpp">FLOYADVERSAL</a>
+        <br>
+        <a href="./n-queen.pp">N-QUEEN</a>
     </div>
     
 </body>
