--- a/index.html
+++ b/index.html
@@ -39,6 +39,31 @@
         <br>
         <a href="./n-queen.pp">N-QUEEN</a>
     </div>
+
+    <div>
+        <H2>Data Structures</H2>
+        <a href="binary.cpp">Binary Search</a>
+        <br>
+        <a href="bubblesort.cpp">Bubble SOrt</a>
+        <br>
+        <a href="deletion.cpp">Deletion Array</a>
+        <br>
+        <a href="inesrt.cpp">Insert Element In array</a>
+        <br>
+        <a href="linear.cpp">Linear Search</a>
+        <br>
+        <a href="linked list.cpp">Linked List</a>
+        <br>
+        <a href="merge.cpp">Merge Sort</a>
+        <br>
+        <a href="Queue.cpp">Queue</a>
+        <br>
+        <a href="quicksort.cpp">Quick SOrt</a>
+        <br>
+        <a href="Selection.cpp">Selection Sort</a>
+        <br>
+        <a href="Stack.cpp">Stack</a>
+    </div>
     
 </body>
 </html>
