--- a/index.html
+++ b/index.html
@@ -42,27 +42,37 @@
 
     <div>
         <H2>Data Structures</H2>
-        <a href="binary.cpp">Binary Search</a>
+        <a href="abstract.py">ABSTRACTION-1</a>
         <br>
-        <a href="bubblesort.cpp">Bubble SOrt</a>
+        <a href="abstract2.py">ABSTRACTION-2</a>
         <br>
-        <a href="deletion.cpp">Deletion Array</a>
+        <a href="abstract3.py">ABSTRACTION-3</a>
         <br>
-        <a href="inesrt.cpp">Insert Element In array</a>
+        <a href="constructor.py">CONSTRUCTOR</a>
         <br>
-        <a href="linear.cpp">Linear Search</a>
+        <a href="dob.py">DOB</a>
         <br>
-        <a href="linked list.cpp">Linked List</a>
+        <a href="emp.py">EMPLOY</a>
         <br>
-        <a href="merge.cpp">Merge Sort</a>
+        <a href="exception.py">EXCEPTION-HANDLING</a>
         <br>
-        <a href="Queue.cpp">Queue</a>
+        <a href="custom_exception.py">CUSTOM-EXCEPTION</a>
         <br>
-        <a href="quicksort.cpp">Quick SOrt</a>
+        <a href="instance.py">INSTANCE</a>
         <br>
-        <a href="Selection.cpp">Selection Sort</a>
+        <a href="instance_var.py">INSTANCE-VARIABLE</a>
         <br>
-        <a href="Stack.cpp">Stack</a>
+        <a href="multilevel.py">MULTILEVEL</a>
+        <br>
+        <a href="multiple_exception.py">MULTIPLE-EXCEPTION</a>
+        <br>
+        <a href="multipleinheritance.py">MULTIPLE-INHERITANCE</a>
+         <br>
+        <a href="polymorphism.py">POLYMORPHISM</a>
+        <br>
+        <a href="singleinheritance.py">SINGLE-INHERITANCE</a>
+        <br>
+        <a href="static_var.py">STATIC-VARIABLE</a>
     </div>
     
 </body>
