--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <div>
+        
         <a href="./binarysearch.cpp">BINARY-SEARCH</a>
         <br>
         <a href="./bubble.cpp">BUBBLE-SORT</a>
@@ -41,7 +42,7 @@
     </div>
 
     <div>
-        <H2>Data Structures</H2>
+        <H2>PYTHON-CODES</H2>
         <a href="abstract.py">ABSTRACTION-1</a>
         <br>
         <a href="abstract2.py">ABSTRACTION-2</a>
