--- a/index.html
+++ b/index.html
@@ -67,11 +67,11 @@
         <br>
         <a href="multiple_exception.py">MULTIPLE-EXCEPTION</a>
         <br>
-        <a href="multipleinheritance.py">MULTIPLE-INHERITANCE</a>
+        <a href="multipleinheritence.py">MULTIPLE-INHERITANCE</a>
          <br>
         <a href="polymorphism.py">POLYMORPHISM</a>
         <br>
-        <a href="singleinheritance.py">SINGLE-INHERITANCE</a>
+        <a href="singleinheritence.py">SINGLE-INHERITANCE</a>
         <br>
         <a href="static_var.py">STATIC-VARIABLE</a>
     </div>
